test/scc/decl/semantic-errors/061.t
typedef int a;
int a;